# rocket-hello

./: .gitignore  Cargo.toml
migrations/2021-07-01T15:18/: down.sql  up.sql
src/: lib.rs  main.org  main.rs  main.rs.bak  models.rs  schema.rs
